# WinImm

./: .clang-format  CCompWnd.cpp  CCompWnd.h  CMakeLists.txt  CStatusWnd.cpp  CStatusWnd.h  CandidateInfoEx.cpp  CandidateInfoEx.h  CommonHeader.h  CompositionStringEx.cpp  CompositionStringEx.h  ImcHandle.cpp  ImcHandle.h  ImeBaseWnd.h  README.md  UIWnd.cpp  UIWnd.h  dllmain.cpp  imm.cpp  installer.cpp
scripts/: build.bat  build_incr.bat  install.bat
